--- a/te_final/te_dataandcorr.ipynb
+++ b/te_final/te_dataandcorr.ipynb
@@ -77,23 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "hankel = Hankel()\n",
     "corrhankel = Corrhankel()\n",
-    "lag = 360\n",
+    "lag = 500\n",
     "stride = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_normal,nolag_normal = corrhankel.fit(X_normal.to_numpy(),lag,stride)"
    ]
   },
   {
@@ -102,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corr_attack,nolag_attack = corrhankel.fit(X_attack.to_numpy(),lag,stride)"
+    "corr_normal,nolag_normal = corrhankel.fit(X_normal.to_numpy(),lag,stride)"
    ]
   },
   {
@@ -111,8 +102,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "corr_attack,nolag_attack = corrhankel.fit(X_attack.to_numpy(),lag,stride)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_test1 = pd.read_csv('~/data/te/normal_testing.csv')\n",
+    "df_test1 = df_test1.sample(n=15000, random_state=42)\n",
+    "df_test1.reset_index(drop=True, inplace=True)\n",
     "df_test2 = pd.read_csv('~/data/te/attack_testing.csv')\n",
+    "df_test2 = df_test2.groupby('faultNumber').apply(lambda x: x.sample(n=150, random_state=42))\n",
+    "df_test2.reset_index(drop=True, inplace=True)\n",
     "df_test=pd.concat((df_test1,df_test2),axis=0)"
    ]
   },
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -185,37 +189,37 @@
        "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sensor_predicted = np.asarray(sensor_predicted)\n",
+    "# sensor_mean = np.mean(sensor_predicted, axis=0)\n",
+    "# y_predicted = (sensor_mean > 0.2).astype(int)\n",
     "y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
     "y_predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.963855421686747\n",
-      "Precision  0.975609756097561\n",
-      "Recall  0.9876543209876543\n",
-      "F1-score  0.9815950920245398\n"
+      "Accuracy  0.4090909090909091\n",
+      "Precision  0.4326923076923077\n",
+      "Recall  0.8823529411764706\n",
+      "F1-score  0.5806451612903226\n",
+      "False Positive Rate  1.0\n"
      ]
     }
    ],
@@ -223,22 +227,23 @@
     "print(\"Accuracy \",accuracy_score(y_actual,y_predicted))\n",
     "print(\"Precision \",precision_score(y_actual,y_predicted))\n",
     "print(\"Recall \",recall_score(y_actual,y_predicted))\n",
-    "print(\"F1-score \",f1_score(y_actual,y_predicted))"
+    "print(\"F1-score \",f1_score(y_actual,y_predicted))\n",
+    "print(\"False Positive Rate \",calculate_fpr(y_actual,y_predicted))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.23366543095458756 Median : 0.15060240963855423 Min : 0.07228915662650602 Max : 0.9036144578313253\n",
-      "precision - Mean: 0.9964764180730566 Median : 1.0 Min : 0.9682539682539683 Max : 1.0\n",
-      "recall -    Mean: 0.2178300094966762 Median : 0.12962962962962962 Min : 0.04938271604938271 Max : 0.9259259259259259\n",
-      "f1 -        Mean: 0.3040875701658385 Median : 0.22950819672131148 Min : 0.09411764705882353 Max : 0.949367088607595\n"
+      "Accuracy -  Mean: 0.5832167832167833 Median : 0.6181818181818182 Min : 0.2 Max : 0.7181818181818181\n",
+      "precision - Mean: 0.9038056314589907 Median : 1.0 Min : 0.19230769230769232 Max : 1.0\n",
+      "recall -    Mean: 0.23793363499245854 Median : 0.21568627450980393 Min : 0.058823529411764705 Max : 0.6470588235294118\n",
+      "f1 -        Mean: 0.3387638851772395 Median : 0.32547288776796973 Min : 0.1111111111111111 Max : 0.5753424657534247\n"
      ]
     }
    ],
@@ -258,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -266,46 +271,46 @@
      "output_type": "stream",
      "text": [
       "------Number of Clusters:  2 -----------\n",
-      "Accuracy  0.963855421686747\n",
-      "Precision  0.975609756097561\n",
-      "Recall  0.9876543209876543\n",
-      "F1-score  0.9815950920245398\n",
-      "False Positive Rate  1.0 \n",
+      "Accuracy  0.8363636363636363\n",
+      "Precision  0.9024390243902439\n",
+      "Recall  0.7254901960784313\n",
+      "F1-score  0.8043478260869564\n",
+      "False Positive Rate  0.06779661016949153 \n",
       "\n",
       "------Number of Clusters:  3 -----------\n",
-      "Accuracy  0.7891566265060241\n",
+      "Accuracy  0.8818181818181818\n",
       "Precision  1.0\n",
-      "Recall  0.7839506172839507\n",
-      "F1-score  0.8788927335640139\n",
+      "Recall  0.7450980392156863\n",
+      "F1-score  0.8539325842696629\n",
       "False Positive Rate  0.0 \n",
       "\n",
       "------Number of Clusters:  4 -----------\n",
-      "Accuracy  0.6686746987951807\n",
+      "Accuracy  0.8636363636363636\n",
       "Precision  1.0\n",
-      "Recall  0.6604938271604939\n",
-      "F1-score  0.7955390334572491\n",
+      "Recall  0.7058823529411765\n",
+      "F1-score  0.8275862068965517\n",
       "False Positive Rate  0.0 \n",
       "\n",
       "------Number of Clusters:  5 -----------\n",
-      "Accuracy  0.8012048192771084\n",
-      "Precision  0.9849624060150376\n",
-      "Recall  0.808641975308642\n",
-      "F1-score  0.888135593220339\n",
-      "False Positive Rate  0.5 \n",
+      "Accuracy  0.9181818181818182\n",
+      "Precision  1.0\n",
+      "Recall  0.8235294117647058\n",
+      "F1-score  0.9032258064516129\n",
+      "False Positive Rate  0.0 \n",
       "\n",
       "------Number of Clusters:  6 -----------\n",
-      "Accuracy  0.7891566265060241\n",
-      "Precision  0.9847328244274809\n",
-      "Recall  0.7962962962962963\n",
-      "F1-score  0.8805460750853241\n",
-      "False Positive Rate  0.5 \n",
+      "Accuracy  0.8454545454545455\n",
+      "Precision  1.0\n",
+      "Recall  0.6666666666666666\n",
+      "F1-score  0.8\n",
+      "False Positive Rate  0.0 \n",
       "\n",
       "------Number of Clusters:  7 -----------\n",
-      "Accuracy  0.7891566265060241\n",
-      "Precision  0.9774436090225563\n",
-      "Recall  0.8024691358024691\n",
-      "F1-score  0.8813559322033897\n",
-      "False Positive Rate  0.75 \n",
+      "Accuracy  0.8363636363636363\n",
+      "Precision  1.0\n",
+      "Recall  0.6470588235294118\n",
+      "F1-score  0.7857142857142858\n",
+      "False Positive Rate  0.0 \n",
       "\n"
      ]
     }
@@ -355,18 +360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Scores:  [0.963855421686747, 0.7891566265060241, 0.6686746987951807, 0.8012048192771084, 0.7891566265060241, 0.7891566265060241]\n",
-      "Precision Scores:  [0.975609756097561, 1.0, 1.0, 0.9849624060150376, 0.9847328244274809, 0.9774436090225563]\n",
-      "Recall Scores:  [0.9876543209876543, 0.7839506172839507, 0.6604938271604939, 0.808641975308642, 0.7962962962962963, 0.8024691358024691]\n",
-      "F1 Scores:  [0.9815950920245398, 0.8788927335640139, 0.7955390334572491, 0.888135593220339, 0.8805460750853241, 0.8813559322033897]\n",
-      "False Positive Rates:  [1.0, 0.0, 0.0, 0.5, 0.5, 0.75]\n"
+      "Accuracy Scores:  [0.8363636363636363, 0.8818181818181818, 0.8636363636363636, 0.9181818181818182, 0.8454545454545455, 0.8363636363636363]\n",
+      "Precision Scores:  [0.9024390243902439, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "Recall Scores:  [0.7254901960784313, 0.7450980392156863, 0.7058823529411765, 0.8235294117647058, 0.6666666666666666, 0.6470588235294118]\n",
+      "F1 Scores:  [0.8043478260869564, 0.8539325842696629, 0.8275862068965517, 0.9032258064516129, 0.8, 0.7857142857142858]\n",
+      "False Positive Rates:  [0.06779661016949153, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -416,24 +421,45 @@
      "output_type": "stream",
      "text": [
       "------Number of Clusters:  2 -----------\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
+      "Accuracy  0.9\n",
+      "Precision  0.6111111111111112\n",
       "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "False Positive Rate  1.0 \n",
+      "F1-score  0.7586206896551725\n",
+      "False Positive Rate  0.11864406779661017 \n",
       "\n",
       "------Number of Clusters:  3 -----------\n",
-      "Accuracy  0.7636363636363637\n",
-      "Precision  0.9761904761904762\n",
-      "Recall  0.7735849056603774\n",
-      "F1-score  0.863157894736842\n",
-      "False Positive Rate  0.5 \n",
+      "Accuracy  1.0\n",
+      "Precision  1.0\n",
+      "Recall  1.0\n",
+      "F1-score  1.0\n",
+      "False Positive Rate  0.0 \n",
       "\n",
       "------Number of Clusters:  4 -----------\n",
-      "Accuracy  0.7545454545454545\n",
+      "Accuracy  1.0\n",
       "Precision  1.0\n",
-      "Recall  0.7452830188679245\n",
-      "F1-score  0.854054054054054\n",
+      "Recall  1.0\n",
+      "F1-score  1.0\n",
+      "False Positive Rate  0.0 \n",
+      "\n",
+      "------Number of Clusters:  5 -----------\n",
+      "Accuracy  1.0\n",
+      "Precision  1.0\n",
+      "Recall  1.0\n",
+      "F1-score  1.0\n",
+      "False Positive Rate  0.0 \n",
+      "\n",
+      "------Number of Clusters:  6 -----------\n",
+      "Accuracy  0.9714285714285714\n",
+      "Precision  1.0\n",
+      "Recall  0.8181818181818182\n",
+      "F1-score  0.9\n",
+      "False Positive Rate  0.0 \n",
+      "\n",
+      "------Number of Clusters:  7 -----------\n",
+      "Accuracy  0.9714285714285714\n",
+      "Precision  1.0\n",
+      "Recall  0.8181818181818182\n",
+      "F1-score  0.9\n",
       "False Positive Rate  0.0 \n",
       "\n"
      ]
@@ -484,22 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.9814814814814815,\n",
-       " 0.8923076923076922,\n",
-       " 0.7674418604651162,\n",
-       " 0.8449197860962566,\n",
-       " 0.8762886597938144,\n",
-       " 0.9035532994923858]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Scores:  [0.9571428571428572, 1.0, 1.0, 0.9857142857142858, 0.9714285714285714, 0.9714285714285714]\n",
+      "Precision Scores:  [0.7857142857142857, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "Recall Scores:  [1.0, 1.0, 1.0, 0.9090909090909091, 0.8181818181818182, 0.8181818181818182]\n",
+      "F1 Scores:  [0.88, 1.0, 1.0, 0.9523809523809523, 0.9, 0.9]\n",
+      "False Positive Rates:  [0.05084745762711865, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+     ]
     }
    ],
    "source": [
@@ -519,43 +542,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------number of clusters------ 2\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "-------number of clusters------ 3\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "-------number of clusters------ 4\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "-------number of clusters------ 5\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "-------number of clusters------ 6\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n",
-      "-------number of clusters------ 7\n",
-      "Accuracy  0.9636363636363636\n",
-      "Precision  0.9636363636363636\n",
-      "Recall  1.0\n",
-      "F1-score  0.9814814814814815\n"
+      "------Number of Clusters:  2 -----------\n",
+      "Accuracy  0.9571428571428572\n",
+      "Precision  1.0\n",
+      "Recall  0.7272727272727273\n",
+      "F1-score  0.8421052631578948\n",
+      "False Positive Rate  0.0 \n",
+      "\n"
      ]
     }
    ],
@@ -588,7 +588,9 @@
     "        fpr.append(calculate_fpr(y_actual,y_predicted))\n",
     "        sensor_models.append(model)    \n",
     "    sensor_predicted = np.asarray(sensor_predicted)\n",
-    "    y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "    sensor_mean = np.mean(sensor_predicted, axis=0)\n",
+    "    y_predicted = (sensor_mean > 0.2).astype(int)\n",
+    "    # y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
     "    cluster_accuracy_3.append(accuracy_score(y_actual, y_predicted))\n",
     "    cluster_precision_3.append(precision_score(y_actual,y_predicted))\n",
     "    cluster_recall_3.append(recall_score(y_actual,y_predicted))\n",
@@ -604,22 +606,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.9814814814814815,\n",
-       " 0.9814814814814815,\n",
-       " 0.9814814814814815,\n",
-       " 0.9814814814814815,\n",
-       " 0.9814814814814815,\n",
-       " 0.9814814814814815]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Scores:  [0.9285714285714286, 0.9571428571428572, 0.35714285714285715, 0.18571428571428572, 0.15714285714285714, 0.15714285714285714]\n",
+      "Precision Scores:  [1.0, 1.0, 0.19642857142857142, 0.16176470588235295, 0.15714285714285714, 0.15714285714285714]\n",
+      "Recall Scores:  [0.5454545454545454, 0.7272727272727273, 1.0, 1.0, 1.0, 1.0]\n",
+      "F1 Scores:  [0.7058823529411764, 0.8421052631578948, 0.3283582089552239, 0.27848101265822783, 0.271604938271605, 0.271604938271605]\n",
+      "False Positive Rates:  [0.0, 0.0, 0.7627118644067796, 0.9661016949152542, 1.0, 1.0]\n"
+     ]
     }
    ],
    "source": [
