--- a/te_final/te_dataandcorr.ipynb
+++ b/te_final/te_dataandcorr.ipynb
@@ -555,6 +555,41 @@
       "Recall  0.7272727272727273\n",
       "F1-score  0.8421052631578948\n",
       "False Positive Rate  0.0 \n",
+      "\n",
+      "------Number of Clusters:  3 -----------\n",
+      "Accuracy  0.9857142857142858\n",
+      "Precision  0.9166666666666666\n",
+      "Recall  1.0\n",
+      "F1-score  0.9565217391304348\n",
+      "False Positive Rate  0.01694915254237288 \n",
+      "\n",
+      "------Number of Clusters:  4 -----------\n",
+      "Accuracy  0.15714285714285714\n",
+      "Precision  0.15714285714285714\n",
+      "Recall  1.0\n",
+      "F1-score  0.271604938271605\n",
+      "False Positive Rate  1.0 \n",
+      "\n",
+      "------Number of Clusters:  5 -----------\n",
+      "Accuracy  0.15714285714285714\n",
+      "Precision  0.15714285714285714\n",
+      "Recall  1.0\n",
+      "F1-score  0.271604938271605\n",
+      "False Positive Rate  1.0 \n",
+      "\n",
+      "------Number of Clusters:  6 -----------\n",
+      "Accuracy  0.15714285714285714\n",
+      "Precision  0.15714285714285714\n",
+      "Recall  1.0\n",
+      "F1-score  0.271604938271605\n",
+      "False Positive Rate  1.0 \n",
+      "\n",
+      "------Number of Clusters:  7 -----------\n",
+      "Accuracy  0.15714285714285714\n",
+      "Precision  0.15714285714285714\n",
+      "Recall  1.0\n",
+      "F1-score  0.271604938271605\n",
+      "False Positive Rate  1.0 \n",
       "\n"
      ]
     }
@@ -606,18 +641,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Scores:  [0.9285714285714286, 0.9571428571428572, 0.35714285714285715, 0.18571428571428572, 0.15714285714285714, 0.15714285714285714]\n",
-      "Precision Scores:  [1.0, 1.0, 0.19642857142857142, 0.16176470588235295, 0.15714285714285714, 0.15714285714285714]\n",
-      "Recall Scores:  [0.5454545454545454, 0.7272727272727273, 1.0, 1.0, 1.0, 1.0]\n",
-      "F1 Scores:  [0.7058823529411764, 0.8421052631578948, 0.3283582089552239, 0.27848101265822783, 0.271604938271605, 0.271604938271605]\n",
-      "False Positive Rates:  [0.0, 0.0, 0.7627118644067796, 0.9661016949152542, 1.0, 1.0]\n"
+      "Accuracy Scores:  [0.9571428571428572, 0.9857142857142858, 0.15714285714285714, 0.15714285714285714, 0.15714285714285714, 0.15714285714285714]\n",
+      "Precision Scores:  [1.0, 0.9166666666666666, 0.15714285714285714, 0.15714285714285714, 0.15714285714285714, 0.15714285714285714]\n",
+      "Recall Scores:  [0.7272727272727273, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "F1 Scores:  [0.8421052631578948, 0.9565217391304348, 0.271604938271605, 0.271604938271605, 0.271604938271605, 0.271604938271605]\n",
+      "False Positive Rates:  [0.0, 0.01694915254237288, 1.0, 1.0, 1.0, 1.0]\n"
      ]
     }
    ],
