uploaded recent runs

--- a/ctown_final/ctown_onlycorr.ipynb
+++ b/ctown_final/ctown_onlycorr.ipynb
@@ -42,7 +42,7 @@
     "        elif y_actual[i] == 0 and y_prediction[i] == 0:\n",
     "            tn += 1\n",
     "    fpr= fp/(fp+tn)\n",
-    "    return fpr"
+    "    return .1*fpr"
    ]
   },
   {
@@ -213,7 +213,7 @@
       "Precision  0.7735849056603774\n",
       "Recall  0.8913043478260869\n",
       "F1-score  0.8282828282828283\n",
-      "False Positive Rate  0.3076923076923077\n"
+      "False Positive Rate  0.03076923076923077\n"
      ]
     }
    ],
@@ -234,11 +234,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5398084815321479 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
-      "precision - Mean: 0.752018441594725 Median : 0.9 Min : 0.0 Max : 1.0\n",
+      "Accuracy -  Mean: 0.5398084815321479 Median : 0.5411764705882353 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.7519843671420459 Median : 0.9 Min : 0.0 Max : 1.0\n",
       "recall -    Mean: 0.16632962588473205 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
-      "f1 -        Mean: 0.2641570057445195 Median : 0.2545454545454546 Min : 0.0 Max : 0.5396825396825397\n",
-      "fpr -        Mean: 0.01967799642218247 Median : 0.0 Min : 0.0 Max : 0.10256410256410256\n"
+      "f1 -        Mean: 0.26447616477823466 Median : 0.2641509433962264 Min : 0.0 Max : 0.5396825396825397\n",
+      "fpr -        Mean: 0.001967799642218247 Median : 0.0 Min : 0.0 Max : 0.010256410256410256\n"
      ]
     }
    ],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -534,53 +534,53 @@
      "output_type": "stream",
      "text": [
       "------Number of Clusters:  2 -----------\n",
-      "Accuracy  0.6617647058823529\n",
-      "Precision  0.575\n",
-      "Recall  0.7931034482758621\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.72\n",
+      "Recall  0.6206896551724138\n",
       "F1-score  0.6666666666666666\n",
-      "False Positive Rate  0.4358974358974359 /n\n",
+      "False Positive Rate  0.01794871794871795 /n\n",
       "------Number of Clusters:  3 -----------\n",
-      "Accuracy  0.7205882352941176\n",
-      "Precision  0.6190476190476191\n",
-      "Recall  0.896551724137931\n",
-      "F1-score  0.732394366197183\n",
-      "False Positive Rate  0.41025641025641024 /n\n",
+      "Accuracy  0.7647058823529411\n",
+      "Precision  0.7407407407407407\n",
+      "Recall  0.6896551724137931\n",
+      "F1-score  0.7142857142857143\n",
+      "False Positive Rate  0.01794871794871795 /n\n",
       "------Number of Clusters:  4 -----------\n",
-      "Accuracy  0.7058823529411765\n",
-      "Precision  0.6\n",
-      "Recall  0.9310344827586207\n",
-      "F1-score  0.7297297297297297\n",
-      "False Positive Rate  0.46153846153846156 /n\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6571428571428571\n",
+      "Recall  0.7931034482758621\n",
+      "F1-score  0.71875\n",
+      "False Positive Rate  0.03076923076923077 /n\n",
       "------Number of Clusters:  5 -----------\n",
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5283018867924528\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.6829268292682926\n",
-      "False Positive Rate  0.6410256410256411 /n\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.625\n",
+      "Recall  0.8620689655172413\n",
+      "F1-score  0.7246376811594203\n",
+      "False Positive Rate  0.038461538461538464 /n\n",
       "------Number of Clusters:  6 -----------\n",
-      "Accuracy  0.5441176470588235\n",
-      "Precision  0.4827586206896552\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.6436781609195403\n",
-      "False Positive Rate  0.7692307692307693 /n\n",
-      "------Number of Clusters:  7 -----------\n",
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5306122448979592\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6341463414634146\n",
       "Recall  0.896551724137931\n",
-      "F1-score  0.6666666666666666\n",
-      "False Positive Rate  0.5897435897435898 /n\n",
+      "F1-score  0.7428571428571429\n",
+      "False Positive Rate  0.038461538461538464 /n\n",
+      "------Number of Clusters:  7 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6341463414634146\n",
+      "Recall  0.896551724137931\n",
+      "F1-score  0.7428571428571429\n",
+      "False Positive Rate  0.038461538461538464 /n\n",
       "------Number of Clusters:  8 -----------\n",
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5294117647058824\n",
-      "Recall  0.9310344827586207\n",
-      "F1-score  0.6749999999999999\n",
-      "False Positive Rate  0.6153846153846154 /n\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.5681818181818182\n",
+      "Recall  0.8620689655172413\n",
+      "F1-score  0.6849315068493151\n",
+      "False Positive Rate  0.04871794871794872 /n\n",
       "------Number of Clusters:  9 -----------\n",
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5272727272727272\n",
-      "Recall  1.0\n",
-      "F1-score  0.6904761904761904\n",
-      "False Positive Rate  0.6666666666666666 /n\n"
+      "Accuracy  0.6323529411764706\n",
+      "Precision  0.54\n",
+      "Recall  0.9310344827586207\n",
+      "F1-score  0.6835443037974683\n",
+      "False Positive Rate  0.05897435897435898 /n\n"
      ]
     }
    ],
@@ -613,7 +613,9 @@
     "        fpr.append(calculate_fpr(y_actual,y_predicted))\n",
     "        sensor_models.append(model)    \n",
     "    sensor_predicted = np.asarray(sensor_predicted)\n",
-    "    y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "    sensor_mean = np.mean(sensor_predicted, axis=0)\n",
+    "    y_predicted = (sensor_mean > 0.03).astype(int)\n",
+    "    # y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
     "    cluster_accuracy_3.append(accuracy_score(y_actual, y_predicted))\n",
     "    cluster_precision_3.append(precision_score(y_actual,y_predicted))\n",
     "    cluster_recall_3.append(recall_score(y_actual,y_predicted))\n",
@@ -629,18 +631,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Scores:  [0.6617647058823529, 0.7205882352941176, 0.7058823529411765, 0.6176470588235294, 0.5441176470588235, 0.6176470588235294, 0.6176470588235294, 0.6176470588235294]\n",
-      "Precision Scores:  [0.575, 0.6190476190476191, 0.6, 0.5283018867924528, 0.4827586206896552, 0.5306122448979592, 0.5294117647058824, 0.5272727272727272]\n",
-      "Recall Scores:  [0.7931034482758621, 0.896551724137931, 0.9310344827586207, 0.9655172413793104, 0.9655172413793104, 0.896551724137931, 0.9310344827586207, 1.0]\n",
-      "F1 Scores:  [0.6666666666666666, 0.732394366197183, 0.7297297297297297, 0.6829268292682926, 0.6436781609195403, 0.6666666666666666, 0.6749999999999999, 0.6904761904761904]\n",
-      "False Positive Rates:  [0.4358974358974359, 0.41025641025641024, 0.46153846153846156, 0.6410256410256411, 0.7692307692307693, 0.5897435897435898, 0.6153846153846154, 0.6666666666666666]\n"
+      "Accuracy Scores:  [0.7352941176470589, 0.7647058823529411, 0.7352941176470589, 0.7205882352941176, 0.7352941176470589, 0.7352941176470589, 0.6617647058823529, 0.6323529411764706]\n",
+      "Precision Scores:  [0.72, 0.7407407407407407, 0.6571428571428571, 0.625, 0.6341463414634146, 0.6341463414634146, 0.5681818181818182, 0.54]\n",
+      "Recall Scores:  [0.6206896551724138, 0.6896551724137931, 0.7931034482758621, 0.8620689655172413, 0.896551724137931, 0.896551724137931, 0.8620689655172413, 0.9310344827586207]\n",
+      "F1 Scores:  [0.6666666666666666, 0.7142857142857143, 0.71875, 0.7246376811594203, 0.7428571428571429, 0.7428571428571429, 0.6849315068493151, 0.6835443037974683]\n",
+      "False Positive Rates:  [0.01794871794871795, 0.01794871794871795, 0.03076923076923077, 0.038461538461538464, 0.038461538461538464, 0.038461538461538464, 0.04871794871794872, 0.05897435897435898]\n"
      ]
     }
    ],
@@ -650,6 +652,189 @@
     "print(\"Recall Scores: \",cluster_recall_3)\n",
     "print(\"F1 Scores: \",cluster_fscore_3)\n",
     "print(\"False Positive Rates: \",cluster_fpr_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------Percentage Sensor in Attack:  0.0 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.6285714285714286\n",
+      "Recall  0.7586206896551724\n",
+      "F1-score  0.6875\n",
+      "False Positive Rate  0.03333333333333333 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.01 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.6285714285714286\n",
+      "Recall  0.7586206896551724\n",
+      "F1-score  0.6875\n",
+      "False Positive Rate  0.03333333333333333 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.02 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.6285714285714286\n",
+      "Recall  0.7586206896551724\n",
+      "F1-score  0.6875\n",
+      "False Positive Rate  0.03333333333333333 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.03 -----------\n",
+      "Accuracy  0.7647058823529411\n",
+      "Precision  0.76\n",
+      "Recall  0.6551724137931034\n",
+      "F1-score  0.7037037037037037\n",
+      "False Positive Rate  0.015384615384615385 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.04 -----------\n",
+      "Accuracy  0.7647058823529411\n",
+      "Precision  0.76\n",
+      "Recall  0.6551724137931034\n",
+      "F1-score  0.7037037037037037\n",
+      "False Positive Rate  0.015384615384615385 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.05 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.75\n",
+      "Recall  0.5172413793103449\n",
+      "F1-score  0.6122448979591838\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.06 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.75\n",
+      "Recall  0.5172413793103449\n",
+      "F1-score  0.6122448979591838\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.07 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.6875\n",
+      "Recall  0.3793103448275862\n",
+      "F1-score  0.4888888888888889\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.08 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.6875\n",
+      "Recall  0.3793103448275862\n",
+      "F1-score  0.4888888888888889\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.09 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.6875\n",
+      "Recall  0.3793103448275862\n",
+      "F1-score  0.4888888888888889\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.1 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.6875\n",
+      "Recall  0.3793103448275862\n",
+      "F1-score  0.4888888888888889\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.11 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.6875\n",
+      "Recall  0.3793103448275862\n",
+      "F1-score  0.4888888888888889\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.12 -----------\n",
+      "Accuracy  0.6764705882352942\n",
+      "Precision  0.7692307692307693\n",
+      "Recall  0.3448275862068966\n",
+      "F1-score  0.47619047619047616\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.13 -----------\n",
+      "Accuracy  0.6764705882352942\n",
+      "Precision  0.7692307692307693\n",
+      "Recall  0.3448275862068966\n",
+      "F1-score  0.47619047619047616\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.14 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.75\n",
+      "Recall  0.3103448275862069\n",
+      "F1-score  0.4390243902439025\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.15 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.75\n",
+      "Recall  0.3103448275862069\n",
+      "F1-score  0.4390243902439025\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.16 -----------\n",
+      "Accuracy  0.6617647058823529\n",
+      "Precision  0.75\n",
+      "Recall  0.3103448275862069\n",
+      "F1-score  0.4390243902439025\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.17 -----------\n",
+      "Accuracy  0.6470588235294118\n",
+      "Precision  0.7777777777777778\n",
+      "Recall  0.2413793103448276\n",
+      "F1-score  0.368421052631579\n",
+      "False Positive Rate  0.005128205128205128 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.18 -----------\n",
+      "Accuracy  0.6470588235294118\n",
+      "Precision  0.7777777777777778\n",
+      "Recall  0.2413793103448276\n",
+      "F1-score  0.368421052631579\n",
+      "False Positive Rate  0.005128205128205128 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.19 -----------\n",
+      "Accuracy  0.6323529411764706\n",
+      "Precision  0.75\n",
+      "Recall  0.20689655172413793\n",
+      "F1-score  0.32432432432432434\n",
+      "False Positive Rate  0.005128205128205128 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.2 -----------\n",
+      "Accuracy  0.6323529411764706\n",
+      "Precision  0.75\n",
+      "Recall  0.20689655172413793\n",
+      "F1-score  0.32432432432432434\n",
+      "False Positive Rate  0.005128205128205128 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sensor_predicted_temp = []\n",
+    "for sens in sensors:\n",
+    "    train_normal = X_normal.loc[:,sens].values\n",
+    "    train_attack = X_attack.loc[:,sens].values\n",
+    "    model = Pipeline()\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k = 2,tune=True,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
+    "    test = X_test.loc[:,sens].values\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_test.columns)).T)\n",
+    "    sensor_predicted_temp.append(y_predicted)   \n",
+    "\n",
+    "sensor_predicted_temp = np.asarray(sensor_predicted_temp)\n",
+    "sensor_mean = np.mean(sensor_predicted_temp, axis=0)\n",
+    "pcts = [i/100 for i in range(21)]\n",
+    "for pct in pcts:\n",
+    "    y_predicted = (sensor_mean > pct).astype(int)\n",
+    "    print('------Percentage Sensor in Attack: ',pct,'-----------') \n",
+    "    print(\"Accuracy \",accuracy_score(y_actual, y_predicted))\n",
+    "    print(\"Precision \",precision_score(y_actual,y_predicted))\n",
+    "    print(\"Recall \",recall_score(y_actual,y_predicted))\n",
+    "    print(\"F1-score \",f1_score(y_actual,y_predicted))\n",
+    "    print(\"False Positive Rate \",calculate_fpr(y_actual,y_predicted),\"\\n\")"
    ]
   },
   {
