--- a/te_final/te_dataandcorr.ipynb
+++ b/te_final/te_dataandcorr.ipynb
@@ -668,6 +668,189 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------Percentage Sensor in Attack:  0.0 -----------\n",
+      "Accuracy  0.47058823529411764\n",
+      "Precision  0.4444444444444444\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.6086956521739131\n",
+      "False Positive Rate  0.08974358974358976 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.01 -----------\n",
+      "Accuracy  0.47058823529411764\n",
+      "Precision  0.4444444444444444\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.6086956521739131\n",
+      "False Positive Rate  0.08974358974358976 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.02 -----------\n",
+      "Accuracy  0.47058823529411764\n",
+      "Precision  0.4444444444444444\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.6086956521739131\n",
+      "False Positive Rate  0.08974358974358976 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.03 -----------\n",
+      "Accuracy  0.6176470588235294\n",
+      "Precision  0.5294117647058824\n",
+      "Recall  0.9310344827586207\n",
+      "F1-score  0.6749999999999999\n",
+      "False Positive Rate  0.06153846153846154 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.04 -----------\n",
+      "Accuracy  0.6176470588235294\n",
+      "Precision  0.5294117647058824\n",
+      "Recall  0.9310344827586207\n",
+      "F1-score  0.6749999999999999\n",
+      "False Positive Rate  0.06153846153846154 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.05 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.625\n",
+      "Recall  0.8620689655172413\n",
+      "F1-score  0.7246376811594203\n",
+      "False Positive Rate  0.038461538461538464 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.06 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.625\n",
+      "Recall  0.8620689655172413\n",
+      "F1-score  0.7246376811594203\n",
+      "False Positive Rate  0.038461538461538464 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.07 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6774193548387096\n",
+      "Recall  0.7241379310344828\n",
+      "F1-score  0.7\n",
+      "False Positive Rate  0.02564102564102564 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.08 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6774193548387096\n",
+      "Recall  0.7241379310344828\n",
+      "F1-score  0.7\n",
+      "False Positive Rate  0.02564102564102564 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.09 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.6774193548387096\n",
+      "Recall  0.7241379310344828\n",
+      "F1-score  0.7\n",
+      "False Positive Rate  0.02564102564102564 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.1 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.7037037037037037\n",
+      "Recall  0.6551724137931034\n",
+      "F1-score  0.6785714285714286\n",
+      "False Positive Rate  0.020512820512820513 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.11 -----------\n",
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.7037037037037037\n",
+      "Recall  0.6551724137931034\n",
+      "F1-score  0.6785714285714286\n",
+      "False Positive Rate  0.020512820512820513 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.12 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.7272727272727273\n",
+      "Recall  0.5517241379310345\n",
+      "F1-score  0.6274509803921569\n",
+      "False Positive Rate  0.015384615384615385 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.13 -----------\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.7272727272727273\n",
+      "Recall  0.5517241379310345\n",
+      "F1-score  0.6274509803921569\n",
+      "False Positive Rate  0.015384615384615385 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.14 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.7368421052631579\n",
+      "Recall  0.4827586206896552\n",
+      "F1-score  0.5833333333333334\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.15 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.7368421052631579\n",
+      "Recall  0.4827586206896552\n",
+      "F1-score  0.5833333333333334\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.16 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.7368421052631579\n",
+      "Recall  0.4827586206896552\n",
+      "F1-score  0.5833333333333334\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.17 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.7368421052631579\n",
+      "Recall  0.4827586206896552\n",
+      "F1-score  0.5833333333333334\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.18 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.7368421052631579\n",
+      "Recall  0.4827586206896552\n",
+      "F1-score  0.5833333333333334\n",
+      "False Positive Rate  0.01282051282051282 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.19 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.8\n",
+      "Recall  0.41379310344827586\n",
+      "F1-score  0.5454545454545454\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n",
+      "------Percentage Sensor in Attack:  0.2 -----------\n",
+      "Accuracy  0.7058823529411765\n",
+      "Precision  0.8\n",
+      "Recall  0.41379310344827586\n",
+      "F1-score  0.5454545454545454\n",
+      "False Positive Rate  0.007692307692307693 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sensor_predicted_temp = []\n",
+    "for sens in sensors:\n",
+    "    train_normal = X_normal.loc[:,sens].values\n",
+    "    train_attack = X_attack.loc[:,sens].values\n",
+    "    model = Pipeline()\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k = k,tune=True,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T)\n",
+    "    test = X_test.loc[:,sens].values\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_test.columns)).T)\n",
+    "    sensor_predicted_temp.append(y_predicted)   \n",
+    "\n",
+    "sensor_predicted_temp = np.asarray(sensor_predicted_temp)\n",
+    "sensor_mean = np.mean(sensor_predicted_temp, axis=0)\n",
+    "pcts = [i/100 for i in range(21)]\n",
+    "for pct in pcts:\n",
+    "    y_predicted = (sensor_mean > pct).astype(int)\n",
+    "    print('------Percentage Sensor in Attack: ',pct,'-----------') \n",
+    "    print(\"Accuracy \",accuracy_score(y_actual, y_predicted))\n",
+    "    print(\"Precision \",precision_score(y_actual,y_predicted))\n",
+    "    print(\"Recall \",recall_score(y_actual,y_predicted))\n",
+    "    print(\"F1-score \",f1_score(y_actual,y_predicted))\n",
+    "    print(\"False Positive Rate \",calculate_fpr(y_actual,y_predicted),\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
